Revert overflow fix.

--- a/frontends/Scss/somanyfeeds.scss
+++ b/frontends/Scss/somanyfeeds.scss
@@ -308,7 +308,6 @@ article {
 
   .content {
     line-height: 1.6;
-    overflow-x: auto;
   }
 }
 
